module: add new moduel for crawling

--- a/package.json
+++ b/package.json
@@ -27,6 +27,15 @@
     "dev": "nodemon --watch \"src/**/*.ts\" --exec \"ts-node\" src/app.ts"
   },
   "dependencies": {
-    "express": "^4.18.1"
+    "axios": "^0.27.2",
+    "express": "^4.18.1",
+    "metascraper": "^5.29.8",
+    "metascraper-date": "^5.29.7",
+    "metascraper-description": "^5.29.7",
+    "metascraper-image": "^5.29.7",
+    "metascraper-publisher": "^5.29.7",
+    "metascraper-title": "^5.29.7",
+    "metascraper-url": "^5.29.7",
+    "mongodb": "^4.7.0"
   }
 }
