--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^18.0.0",
+    "@types/redis": "^4.0.11",
     "@typescript-eslint/eslint-plugin": "^5.28.0",
     "@typescript-eslint/parser": "^5.28.0",
     "eslint": "^8.17.0",
@@ -36,6 +37,7 @@
     "metascraper-publisher": "^5.29.7",
     "metascraper-title": "^5.29.7",
     "metascraper-url": "^5.29.7",
-    "mongodb": "^4.7.0"
+    "mongodb": "^4.7.0",
+    "redis": "^4.1.0"
   }
 }
