--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/express": "^4.17.13",
     "@types/node": "^18.0.0",
     "@types/redis": "^4.0.11",
+    "@types/validator": "^13.7.3",
     "@typescript-eslint/eslint-plugin": "^5.28.0",
     "@typescript-eslint/parser": "^5.28.0",
     "eslint": "^8.17.0",
@@ -38,6 +39,7 @@
     "metascraper-title": "^5.29.7",
     "metascraper-url": "^5.29.7",
     "mongodb": "^4.7.0",
-    "redis": "^4.1.0"
+    "redis": "^4.1.0",
+    "validator": "^13.7.0"
   }
 }
